--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>strona</title>
+    <title>Witaj!👋</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="bg.css" />
     <link rel="stylesheet" href="karta.css" />
@@ -15,41 +15,28 @@
 </head>
 
 <body>
-    <header>
-        <nav class="main-nav">
-            <input type="checkbox" id="check" />
-            <label for="check" class="menu-btn">
-          <i class="fas fa-bars"></i>
-        </label>
-            <a href="index.html" class="logo">Patrick</a>
-            <ul class="navlinks">
-                <li><a href="memy.html">memy</a></li>
-                <li><a href="galeria.html">galeria</a></li>
-                <li><a href="o_mnie.html">o mnie</a></li>
-                <li><a href="zadania.html" class="contact">zadania</a></li>
-            </ul>
-        </nav>
-    </header>
     <section>
-        <h1>Witaj na mojej stronie !</h1><br><br>
-
-        <img src="mikolaj.svg">
-
-        <div class="center">
-            <div class="karta">
-                <h2>Grafika<br>Wektorowa</h2>
-                <a href="galeria.html">zobacz więcej</a>
-            </div>
-            <div class="karta">
-                <h2>Grafika<br>Rastrowa</h2>
-                <a href="galeria.html">zobacz więcej</a>
-            </div>
-            <div class="karta">
-                <h2>Grafika<br>3D</h2>
-                <a href="galeria.html">zobacz więcej</a>
+        <div class="bg">
+            <header>
+                <nav class="main-nav">
+                    <input type="checkbox" id="check"/>
+                    <label for="check" class="menu-btn">
+                  <i class="fas fa-bars"></i>
+                </label>
+                    <a href="index.html" class="logo">Patrick</a>
+                    <ul class="navlinks">
+                        <li><a href="memy.html">memy</a></li>
+                        <li><a href="galeria.html">galeria</a></li>
+                        <li><a href="o_mnie.html">o mnie</a></li>
+                        <li><a href="zadania.html" class="contact">zadania</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <div class="content">
+                <h1>Witaj na mojej stronie</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.<br> Aliquam dignissim neque eget sollicitudin gravida.</p>
             </div>
         </div>
-        
         <div class="tresc">
             <h2>Lorem Ipsum</h2>
             <p>
@@ -68,6 +55,9 @@
                 Sed porta est quis purus ultrices lobortis. Nam ut velit metus. Aliquam consequat pretium massa. Nullam eleifend, urna quis placerat faucibus, nibh erat luctus diam, vitae aliquam mi lorem id metus. Praesent elit libero,
                 mollis at arcu sit amet, egestas iaculis quam. Morbi sit amet lacinia tellus. Nam laoreet lacus non faucibus viverra.  
             </p>
+        </div>
+        <div class="zdjecie">
+            <img src="blender.png">
         </div>
     </section>
     <footer>
