--- a/o_mnie.html
+++ b/o_mnie.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>O mnie 👨🏻‍🎓</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="bg.css" />
     <link rel="stylesheet" href="karta.css" />
@@ -31,10 +31,9 @@
         </nav>
     </header>
     <h1>O mnie</h1>
-    <div class="center">
-        <div class="karta">
+        <div class="center">
+            <h2>Może i jestem głupi. Ale kiedy mnie poznasz, dowiesz się, że jestem również biedny</h2>
         </div>
-    </div>
     <footer>
         <div calss="button"></div>
         <div class="container">
