--- a/zadania.html
+++ b/zadania.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Zadania 📄</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="bg.css" />
     <link rel="stylesheet" href="karta.css" />
@@ -15,24 +15,48 @@
 </head>
 
 <body>
-    <header>
-        <nav class="main-nav">
-            <input type="checkbox" id="check" />
-            <label for="check" class="menu-btn">
-          <i class="fas fa-bars"></i>
-        </label>
-            <a href="index.html" class="logo">Patrick</a>
-            <ul class="navlinks">
-                <li><a href="memy.html">memy</a></li>
-                <li><a href="galeria.html">galeria</a></li>
-                <li><a href="o_mnie.html">o mnie</a></li>
-                <li><a href="zadania.html" class="contact">zadania</a></li>
-            </ul>
-        </nav>
-    </header>
-    <h1>Zadania Domowe</h1>
+    <div>
+        <header>
+            <nav class="main-nav">
+                <input type="checkbox" id="check" />
+                <label for="check" class="menu-btn">
+            <i class="fas fa-bars"></i>
+            </label>
+                <a href="index.html" class="logo">Patrick</a>
+                <ul class="navlinks">
+                    <li><a href="memy.html">memy</a></li>
+                    <li><a href="galeria.html">galeria</a></li>
+                    <li><a href="o_mnie.html">o mnie</a></li>
+                    <li><a href="zadania.html" class="contact">zadania</a></li>
+                </ul>
+            </nav>
+        </header>
+        <h1>Zadania Domowe</h1>
+    </div>
     <div class="center">
         <div class="karta">
+            <h2>Historia<br>Jana</h2>
+            <a href="jan.html">zobacz więcej</a>
+        </div>
+        <div class="karta">
+            <h2>Stara<br>strona</h2>
+            <a href="http://motion.zsti.me">zobacz więcej</a>
+        </div>
+        <div class="karta">
+            <h2>Grafika<br>rastrowa</h2>
+            <a href="https://pl.wikipedia.org/wiki/Grafika_rastrowa">zobacz więcej</a>
+        </div>
+        <div class="karta">
+            <h2>Grafika<br>wektorowa</h2>
+            <a href="https://pl.wikipedia.org/wiki/Grafika_wektorowa">zobacz więcej</a>
+        </div>
+        <div class="karta">
+            <h2>Grafika<br>3D</h2>
+            <a href="https://pl.wikipedia.org/wiki/Grafika_3D">zobacz więcej</a>
+        </div>
+        <div class="karta">
+            <h2>Stara<br>strona</h2>
+            <a href="https://motion.zsti.me/zadania.html">zobacz więcej</a>
         </div>
     </div>
     <footer>
