--- a/galeria.html
+++ b/galeria.html
@@ -30,11 +30,7 @@
             </ul>
         </nav>
     </header>
-    <h1>Galeria</h1>
-    <div class="center">
-        <div class="karta">
-        </div>
-    </div>
+    <h1>Tu będzie Galeria</h1>
     <footer>
         <div calss="button"></div>
         <div class="container">
