--- a/memy.html
+++ b/memy.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Memy ☢️</title>
     <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="bg.css" />
     <link rel="stylesheet" href="karta.css" />
@@ -30,11 +30,7 @@
             </ul>
         </nav>
     </header>
-    <h1>Memy</h1>
-    <div class="center">
-        <div class="karta">
-        </div>
-    </div>
+    <h1>Tu będą Memy</h1>
     <footer>
         <div calss="button"></div>
         <div class="container">
