dodawanie nowego zadania z korinem

--- a/zadania.html
+++ b/zadania.html
@@ -55,8 +55,8 @@
             <a href="https://pl.wikipedia.org/wiki/Grafika_3D">zobacz więcej</a>
         </div>
         <div class="karta">
-            <h2>Stara<br>strona</h2>
-            <a href="https://motion.zsti.me/zadania.html">zobacz więcej</a>
+            <h2>Data<br>13.12.2021</h2>
+            <a href="13.12.2021.html">zobacz więcej</a>
         </div>
     </div>
     <footer>
