dodawanie formularzy oraz drobne zmiany graficzne

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <div class="bg">
             <header>
                 <nav class="main-nav">
-                    <input type="checkbox" id="check"/>
+                    <input type="checkbox" id="check" />
                     <label for="check" class="menu-btn">
                   <i class="fas fa-bars"></i>
                 </label>
@@ -40,20 +40,17 @@
         <div class="tresc">
             <h2>Lorem Ipsum</h2>
             <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim neque eget sollicitudin gravida. Curabitur lacus augue, ornare id iaculis ac, pellentesque in leo. Cras volutpat eros eget ex tempor posuere.
-                Curabitur a risus ut libero tristique lobortis vitae et nulla. Proin eu nunc non tortor finibus tincidunt. Nullam tempor varius felis, quis dictum nisi pretium varius. Curabitur tempus libero felis,
-                cursus mollis ante ultrices sed. Donec quis mi eget elit ultricies facilisis ut sed dolor.
-                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus rutrum neque ut magna posuere, eleifend malesuada est sagittis. Donec vel volutpat mi, nec pretium elit. Donec non tortor venenatis,
-                congue odio id, eleifend arcu. In tempor rhoncus elementum. Etiam vestibulum nulla purus, vel pharetra quam bibendum a. Donec interdum id sapien fringilla laoreet. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                Sed porta est quis purus ultrices lobortis. Nam ut velit metus. Aliquam consequat pretium massa. Nullam eleifend, urna quis placerat faucibus, nibh erat luctus diam, vitae aliquam mi lorem id metus. Praesent elit libero,
-                mollis at arcu sit amet, egestas iaculis quam. Morbi sit amet lacinia tellus. Nam laoreet lacus non faucibus viverra.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim neque eget sollicitudin gravida. Curabitur lacus augue, ornare id iaculis ac, pellentesque in leo. Cras volutpat eros eget ex tempor posuere.
-                Curabitur a risus ut libero tristique lobortis vitae et nulla. Proin eu nunc non tortor finibus tincidunt. Nullam tempor varius felis, quis dictum nisi pretium varius. Curabitur tempus libero felis,
-                cursus mollis ante ultrices sed. Donec quis mi eget elit ultricies facilisis ut sed dolor.
-                Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus rutrum neque ut magna posuere, eleifend malesuada est sagittis. Donec vel volutpat mi, nec pretium elit. Donec non tortor venenatis,
-                congue odio id, eleifend arcu. In tempor rhoncus elementum. Etiam vestibulum nulla purus, vel pharetra quam bibendum a. Donec interdum id sapien fringilla laoreet. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                Sed porta est quis purus ultrices lobortis. Nam ut velit metus. Aliquam consequat pretium massa. Nullam eleifend, urna quis placerat faucibus, nibh erat luctus diam, vitae aliquam mi lorem id metus. Praesent elit libero,
-                mollis at arcu sit amet, egestas iaculis quam. Morbi sit amet lacinia tellus. Nam laoreet lacus non faucibus viverra.  
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim neque eget sollicitudin gravida. Curabitur lacus augue, ornare id iaculis ac, pellentesque in leo. Cras volutpat eros eget ex tempor posuere. Curabitur a risus ut libero tristique
+                lobortis vitae et nulla. Proin eu nunc non tortor finibus tincidunt. Nullam tempor varius felis, quis dictum nisi pretium varius. Curabitur tempus libero felis, cursus mollis ante ultrices sed. Donec quis mi eget elit ultricies facilisis
+                ut sed dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus rutrum neque ut magna posuere, eleifend malesuada est sagittis. Donec vel volutpat mi, nec pretium elit. Donec non tortor venenatis,
+                congue odio id, eleifend arcu. In tempor rhoncus elementum. Etiam vestibulum nulla purus, vel pharetra quam bibendum a. Donec interdum id sapien fringilla laoreet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed porta
+                est quis purus ultrices lobortis. Nam ut velit metus. Aliquam consequat pretium massa. Nullam eleifend, urna quis placerat faucibus, nibh erat luctus diam, vitae aliquam mi lorem id metus. Praesent elit libero, mollis at arcu sit amet,
+                egestas iaculis quam. Morbi sit amet lacinia tellus. Nam laoreet lacus non faucibus viverra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim neque eget sollicitudin gravida. Curabitur lacus augue, ornare id iaculis
+                ac, pellentesque in leo. Cras volutpat eros eget ex tempor posuere. Curabitur a risus ut libero tristique lobortis vitae et nulla. Proin eu nunc non tortor finibus tincidunt. Nullam tempor varius felis, quis dictum nisi pretium varius.
+                Curabitur tempus libero felis, cursus mollis ante ultrices sed. Donec quis mi eget elit ultricies facilisis ut sed dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus rutrum neque ut
+                magna posuere, eleifend malesuada est sagittis. Donec vel volutpat mi, nec pretium elit. Donec non tortor venenatis, congue odio id, eleifend arcu. In tempor rhoncus elementum. Etiam vestibulum nulla purus, vel pharetra quam bibendum a.
+                Donec interdum id sapien fringilla laoreet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed porta est quis purus ultrices lobortis. Nam ut velit metus. Aliquam consequat pretium massa. Nullam eleifend, urna quis placerat
+                faucibus, nibh erat luctus diam, vitae aliquam mi lorem id metus. Praesent elit libero, mollis at arcu sit amet, egestas iaculis quam. Morbi sit amet lacinia tellus. Nam laoreet lacus non faucibus viverra.
             </p>
         </div>
         <div class="zdjecie">
