--- a/memy.html
+++ b/memy.html
@@ -36,7 +36,7 @@
         <div class="container">
             <div class="cont">
                 <div class="footer_center">
-                    <h3>💻 Copyright By Patrick (czyt. Tobiasz Boehm 1P)</h3>
+                    <h3>Copyright By Patrick (czyt. Tobiasz Boehm 1P)</h3>
                 </div>
             </div>
         </div>
