--- a/zadania.html
+++ b/zadania.html
@@ -58,6 +58,10 @@
             <h2>Data<br>13.12.2021</h2>
             <a href="13.12.2021.html">zobacz więcej</a>
         </div>
+        <div class="karta">
+            <h2>formularze<br>20.12.2021</h2>
+            <a href="formularze.html">zobacz więcej</a>
+        </div>
     </div>
     <footer>
         <div calss="button"></div>
