drobna przebudowa strony + dadanie zadan

--- a/galeria.html
+++ b/galeria.html
@@ -6,12 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="bg.css" />
-    <link rel="stylesheet" href="karta.css" />
-    <link rel="stylesheet" href="footer.css" />
-    <link rel="stylesheet" href="nav.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -30,7 +25,10 @@
             </ul>
         </nav>
     </header>
-    <h1>Tu będzie Galeria</h1>
+    <h1>Galeria</h1>
+    <div class="center img"><img src="https://picsum.photos/200/300?random=1"></div>
+    <div class="center img"><img src="https://picsum.photos/200/300?random=2"></div>
+    <div class="center img"><img src="https://picsum.photos/200/300?random=3"></div>
     <footer>
         <div calss="button"></div>
         <div class="container">
