--- a/o_mnie.html
+++ b/o_mnie.html
@@ -6,12 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>O mnie 👨🏻‍🎓</title>
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="bg.css" />
-    <link rel="stylesheet" href="karta.css" />
-    <link rel="stylesheet" href="footer.css" />
-    <link rel="stylesheet" href="nav.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -31,9 +26,9 @@
         </nav>
     </header>
     <h1>O mnie</h1>
-        <div class="center">
-            <h2>Może i jestem głupi. Ale kiedy mnie poznasz, dowiesz się, że jestem również biedny</h2>
-        </div>
+    <div class="center">
+        <h2>Może i jestem głupi. Ale kiedy mnie poznasz, dowiesz się, że jestem również biedny</h2>
+    </div>
     <footer>
         <div calss="button"></div>
         <div class="container">
