--- a/zadania.html
+++ b/zadania.html
@@ -6,12 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zadania 📄</title>
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="bg.css" />
-    <link rel="stylesheet" href="karta.css" />
-    <link rel="stylesheet" href="footer.css" />
-    <link rel="stylesheet" href="nav.css" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
+    <link rel="stylesheet" href="style.css" />
 </head>
 
 <body>
@@ -62,6 +57,23 @@
             <h2>formularze<br>20.12.2021</h2>
             <a href="formularze.html">zobacz więcej</a>
         </div>
+        <div class="karta">
+            <h2>pseudo<br>elementy</h2>
+            <a href="pseudo_elementy.html">zobacz więcej</a>
+        </div>
+        <div class="karta">
+            <h2>warstwy<br>css</h2>
+            <a href="warstwy.html">zobacz więcej</a>
+        </div>
+        <div class="karta">
+            <h2>zdarzenia<br>js</h2>
+            <a href="zdarzenia.html">zobacz więcej</a>
+        </div>
+        <div class="karta">
+            <h2>::before<br>::after</h2>
+            <a href="after.html">zobacz więcej</a>
+        </div>
+
     </div>
     <footer>
         <div calss="button"></div>
