zmiany w responsywnosci, rozbudowanie sekcji o mnie

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </label>
                     <a href="index.html" class="logo">Patrick</a>
                     <ul class="navlinks">
-                        <li><a href="memy.html">memy</a></li>
+                        <li><a href="memy.php">memy</a></li>
                         <li><a href="galeria.html">galeria</a></li>
                         <li><a href="o_mnie.html">o mnie</a></li>
                         <li><a href="zadania.html" class="contact">zadania</a></li>
