--- a/o_mnie.html
+++ b/o_mnie.html
@@ -19,16 +19,32 @@
         </label>
             <a href="index.html" class="logo">Patrick</a>
             <ul class="navlinks">
-                <li><a href="memy.html">memy</a></li>
+                <li><a href="memy.php">memy</a></li>
                 <li><a href="galeria.html">galeria</a></li>
                 <li><a href="o_mnie.html">o mnie</a></li>
                 <li><a href="zadania.html" class="contact">zadania</a></li>
             </ul>
         </nav>
     </header>
-    <h1>O mnie</h1>
-    <div class="center">
-        <h2>Może i jestem głupi. Ale kiedy mnie poznasz, dowiesz się, że jestem również biedny</h2>
+    <h1>umiejętności</h1>
+    <div class="card_box">
+
+        <div class="card">
+            <h5>HTML</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora architecto qui amet, facilis nesciunt molestias impedit quibusdam fugit, earum repudiandae harum nisi excepturi blanditiis. Sapiente quasi blanditiis exercitationem quo aliquid?</p>
+        </div>
+
+
+        <div class="card">
+            <h5>CSS</h5>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, totam animi veritatis sapiente eum itaque soluta aliquam doloribus, corrupti iste architecto voluptate consequatur blanditiis esse molestias similique, quam quia temporibus?</p>
+        </div>
+
+
+        <div class="card">
+            <h5>PHP</h5>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fugit eos debitis rem, repellendus officiis quasi rerum facere incidunt quis quibusdam provident magni est recusandae, pariatur voluptate! Dolorem quis neque reprehenderit?</p>
+        </div>
     </div>
     <footer>
         <div calss="button"></div>
