--- a/zadania.html
+++ b/zadania.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zadania 📄</title>
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/style/style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" />
 </head>
 
@@ -32,7 +32,7 @@
     <div class="center">
         <div class="karta">
             <h2>Historia<br>Jana</h2>
-            <a href="jan.html">zobacz więcej</a>
+            <a href="/zadania/">zobacz więcej</a>
         </div>
         <div class="karta">
             <h2>Stara<br>strona</h2>
@@ -52,27 +52,27 @@
         </div>
         <div class="karta">
             <h2>Data<br>13.12.2021</h2>
-            <a href="13.12.2021.html">zobacz więcej</a>
+            <a href="/zadania/13.12.2021.html">zobacz więcej</a>
         </div>
         <div class="karta">
             <h2>formularze<br>20.12.2021</h2>
-            <a href="formularze.html">zobacz więcej</a>
+            <a href="/zadania/formularze.html">zobacz więcej</a>
         </div>
         <div class="karta">
             <h2>pseudo<br>elementy</h2>
-            <a href="pseudo_elementy.html">zobacz więcej</a>
+            <a href="/zadania/pseudo_elementy.html">zobacz więcej</a>
         </div>
         <div class="karta">
             <h2>warstwy<br>css</h2>
-            <a href="warstwy.html">zobacz więcej</a>
+            <a href="/zadania/warstwy.html">zobacz więcej</a>
         </div>
         <div class="karta">
             <h2>zdarzenia<br>js</h2>
-            <a href="zdarzenia.html">zobacz więcej</a>
+            <a href="/zadania/zdarzenia.html">zobacz więcej</a>
         </div>
         <div class="karta">
             <h2>::before<br>::after</h2>
-            <a href="after.html">zobacz więcej</a>
+            <a href="/zadania/after.html">zobacz więcej</a>
         </div>
 
     </div>
