przebudowa struktury i styli strony glownej (index.html)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <section>
+    <section class="blender">
         <div class="bg">
             <header>
                 <nav class="main-nav">
@@ -34,23 +34,88 @@
             </div>
         </div>
         <div class="tresc">
-            <h2>Lorem Ipsum</h2>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim neque eget sollicitudin gravida. Curabitur lacus augue, ornare id iaculis ac, pellentesque in leo. Cras volutpat eros eget ex tempor posuere. Curabitur a risus ut libero tristique
-                lobortis vitae et nulla. Proin eu nunc non tortor finibus tincidunt. Nullam tempor varius felis, quis dictum nisi pretium varius. Curabitur tempus libero felis, cursus mollis ante ultrices sed. Donec quis mi eget elit ultricies facilisis
-                ut sed dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus rutrum neque ut magna posuere, eleifend malesuada est sagittis. Donec vel volutpat mi, nec pretium elit. Donec non tortor venenatis,
-                congue odio id, eleifend arcu. In tempor rhoncus elementum. Etiam vestibulum nulla purus, vel pharetra quam bibendum a. Donec interdum id sapien fringilla laoreet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed porta
-                est quis purus ultrices lobortis. Nam ut velit metus. Aliquam consequat pretium massa. Nullam eleifend, urna quis placerat faucibus, nibh erat luctus diam, vitae aliquam mi lorem id metus. Praesent elit libero, mollis at arcu sit amet,
-                egestas iaculis quam. Morbi sit amet lacinia tellus. Nam laoreet lacus non faucibus viverra. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam dignissim neque eget sollicitudin gravida. Curabitur lacus augue, ornare id iaculis
-                ac, pellentesque in leo. Cras volutpat eros eget ex tempor posuere. Curabitur a risus ut libero tristique lobortis vitae et nulla. Proin eu nunc non tortor finibus tincidunt. Nullam tempor varius felis, quis dictum nisi pretium varius.
-                Curabitur tempus libero felis, cursus mollis ante ultrices sed. Donec quis mi eget elit ultricies facilisis ut sed dolor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia curae; Phasellus rutrum neque ut
-                magna posuere, eleifend malesuada est sagittis. Donec vel volutpat mi, nec pretium elit. Donec non tortor venenatis, congue odio id, eleifend arcu. In tempor rhoncus elementum. Etiam vestibulum nulla purus, vel pharetra quam bibendum a.
-                Donec interdum id sapien fringilla laoreet. Interdum et malesuada fames ac ante ipsum primis in faucibus. Sed porta est quis purus ultrices lobortis. Nam ut velit metus. Aliquam consequat pretium massa. Nullam eleifend, urna quis placerat
-                faucibus, nibh erat luctus diam, vitae aliquam mi lorem id metus. Praesent elit libero, mollis at arcu sit amet, egestas iaculis quam. Morbi sit amet lacinia tellus. Nam laoreet lacus non faucibus viverra.
-            </p>
+            <h1>Blender</h1>
+            <p>scena widoczna powyżej jest stworzona dzięki programowi blender. Blender to wolne i otwarte oprogramowanie do modelowania i renderowania obrazów oraz animacji trójwymiarowych o niekonwencjonalnym interfejsie użytkownika. ma naprawdę wiele
+                zastosowań np: fotorealistyczne kompozycje, animacje, efekty specjalne, montowanie filmów, modelowanie, gry komputerowe, symulacje fizyczne i wiele więcej</p>
         </div>
-        <div class="zdjecie">
-            <img src="/img/blender.png">
+        <div class="zdjecie"></div>
+        <hr>
+        <h1>portfolio / kontakt</h1>
+        <div class="card_box">
+            <div class="card">
+                <h5>GitHub</h5>
+                <p>GitHub – hostingowy serwis internetowy przeznaczony do projektów programistycznych wykorzystujących system kontroli wersji Git. Jeśli chcesz zobaczyć moje projekty na GitHubie kliknij <a href="https://github.com/Patrick3969" target="_blank">tutaj</a></p>
+            </div>
+
+
+            <div class="card">
+                <h5>Discord</h5>
+                <p>Discord to bezpłatna aplikacja służąca do rozmów głosowych i komunikacji za pomocą wiadomości tekstowych, zaprojektowana początkowo dla graczy komputerowych. jeśli chcesz skątaktować się ze mną, dodaj mnie jako znajomego -> <strong>Patrick123#2611</strong></p>
+            </div>
+
+
+            <div class="card">
+                <h5>Steam</h5>
+                <p>Steam to platforma dystrybucji cyfrowej gier komputerowych, system gry wieloosobowej oraz serwis społecznościowy stworzony przez Valve Corporation. jeśli chcesz ograć ze mną w cs`a zobacz <a href="https://steamcommunity.com/id/fffffffaaaaaaa/"
+                        target="_blank">mój profil steam</a> </p>
+            </div>
+        </div>
+        <hr>
+        <div class="partners-box">
+            <h1>Partnerzy</h1>
+            <div class="partner">
+                <h5><a href="http://jakubfrasiak.zsti.me/main/" target="_blank">Jakub F.</a></h5>
+                <p>Strona poświęcona tematyce discorda oraz tworzeniu bot'ów pod te platformę</p>
+            </div>
+            <div class="partner">
+                <h5><a href="http://stanislawjanuszek.zsti.me/" target="_blank">Stanisław J.</a></h5>
+                <p>Kuchnia na całym świecie, czyli co się je w Japonii, Węgrzech, czy też Rosji. Możesz dowiedzieć się co jest narodową potrawą, a także jak ją przygotować</p>
+            </div>
+            <div class="partner">
+                <h5><a href="https://skrawczyk.zsti.me/" target="_blank">Seweryn K.</a></h5>
+                <p>Personalna strona o umiejętnościach oraz krótkiej biografii</p>
+            </div>
+            <div class="partner">
+                <h5><a href="http://www.jakasstrona.zsti.me/" target="_blank">Przemek M.</a></h5>
+                <p>Strona poświęcona wszelkiego rodzaju grom komputerowym</p>
+            </div>
+            <div class="partner">
+                <h5><a href="http://www.m0lz1.zsti.me/" target="_blank">Szymon M.</a></h5>
+                <p>Tutaj dowiesz się wielu rzeczy o postaci z gry League of Legends, o imieniu Katarina</p>
+            </div>
+            <div class="partner">
+                <h5><a href="https://yorick.zsti.me/" target="_blank">Jakub M.</a></h5>
+                <p>Strona o historii, wymaganiach, oraz aktualnych eventach z League of Legends</p>
+            </div>
+            <div class="partner">
+                <h5><a href="https://kubanocon.zsti.me/HTML/Nie%20DONE/Zad%20kostka%20rubika.html#kostka" target="_blank">Jakub N.</a></h5>
+                <p>Witryna dla mądrych ludzi, którzy chcą nauczyć się układać kostkę rubika. Jeśli potrafisz już ją układać, to z pewnością dowiesz się tu wielu ciekawych rzeczy</p>
+            </div>
+            <div class="partner">
+                <h5><a href="http://www.book-power.zsti.me/" target="_blank">Aleksandra O.</a></h5>
+                <p>Jeśli lubisz czytać książki w chłodne samotne wieczory, popijając herbatkę to ta strona jest właśnie dla ciebie. Dowiesz się tu jakie książki możesz w takim momencie przeczytać by zrobiło ci się ciepło na seduszku</p>
+            </div>
+            <div class="partner">
+                <h5><a href="http://www.przemyslkosmiczny.zsti.me/" target="_blank">Mateusz S.</a></h5>
+                <p>Interesują cię rakiety, loty w kosmos albo ogólny przemysł kosmiczny? Być może nie dowiesz się tu czy obcy istnieją, ale z pewnością dowiesz się co, gdzie i kiedy wylądowało</p>
+            </div>
+            <div class="partner">
+                <h5>
+                    <a href="" target="_blank"></a><a href="https://czolgi.zsti.me/" target="_blank">Piotr S.</a></h5>
+                <p>Strona poświęcona w większości czołgom z XXw.</p>
+            </div>
+            <div class="partner">
+                <h5><a href="http://turoxu.zsti.me/" target="_blank">Jakub T.</a></h5>
+                <p>Lubisz chodzić w góry? W takim razie wejdź na tą stronę i zamów wycieczkę, w której skład wchodzi przewodnik oraz przejazd</p>
+            </div>
+            <div class="partner">
+                <h5><a href="http://games.zsti.me/" target="_blank">Szymon T.</a></h5>
+                <p>Tutaj dowiesz się o płatnych oraz darmowych grach</p>
+            </div>
+            <div class="partner">
+                <h5><a href="https://jakubwezowicz.zsti.me/HTML/index.html" target="_blank">Jakub W.</a></h5>
+                <p>Witryna internetowa poświęcona najlepszym quadom firmy Can-am</p>
+            </div>
         </div>
     </section>
     <footer>
