--- a/zadania.html
+++ b/zadania.html
@@ -74,7 +74,10 @@
             <h2>::before<br>::after</h2>
             <a href="/zadania/after.html">zobacz więcej</a>
         </div>
-
+        <div class="karta">
+            <h2>Mieszanie Warstw</h2>
+            <a href="/zadania/tryby_mieszania_warstw.html">zobacz więcej</a>
+        </div>
     </div>
     <footer>
         <div calss="button"></div>
